--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -424,9 +424,7 @@ dd {
 }
 
 p {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
+  margin: 0;
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
@@ -571,10 +569,6 @@ th {
   font-weight: bold;
 }
 
-li {
-  margin-bottom: calc(1.45rem / 2);
-}
-
 ol li {
   padding-left: 0;
 }
@@ -605,10 +599,6 @@ li *:last-child {
 
 p *:last-child {
   margin-bottom: 0;
-}
-
-li>p {
-  margin-bottom: calc(1.45rem / 2);
 }
 
 code {
