--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -23,7 +23,6 @@
 }
 
 .info-about-colon {
-  margin: 7px;
   text-align: justify;
   color: #000;
   font-size: 15px;
@@ -57,7 +56,7 @@
   padding-bottom: 100px;
   height: auto;
   min-height: 90vh;
-  /* margin-top: 70px; */
+  margin-top: 50px;
 }
 
 .main-div-colon {
@@ -126,7 +125,7 @@
 }
 
 .how-you-know {
-  margin-top: 40px;
+  margin-top: 70px;
   margin-bottom: 30px;
   text-align: center;
   color: black;
@@ -136,7 +135,8 @@
 .myth {
   text-align: center;
   color: black;
-  font-size: 20px;
+  font-size: 17px;
+  font-weight: bold;
 }
 
 .about-myth {
@@ -147,8 +147,9 @@
 
 .poop-icon {
   text-align: center;
-  font-size: 60px;
+  font-size: 50px;
   color: #2f6295;
+  margin-bottom: 6px;
 }
 
 .pic-three {
@@ -174,9 +175,19 @@
   padding-left: 20px;
   padding-right: 20px;
   color: black;
-  font-size: 15px;
-  font-weight: bold;
-  text-align: justify;
+  font-size: 17px;
+  /* font-weight: bold; */
+  text-align: center;
+}
+
+.recommendations-b {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 30px;
+  color: black;
+  font-size: 17px;
+  /* font-weight: bold; */
+  text-align: center;
 }
 
 .recommendations-bottom {
@@ -217,6 +228,13 @@
 
 .include {
   margin-right: 30px;
+}
+
+.what-will-get {
+  font-size: 30px;
+  border-top: 1px solid black;
+  padding-top: 15px;
+  text-align: center;
 }
 
 /* @media (max-width: 480px) {
