--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -17,9 +17,12 @@ a:focus {
 }
 
 .navbar {
-  min-height: 100px;
+  position: fixed !important;
+  top: 0;
+  z-index: 1;
+  width: 82%;
+  /* min-height: 100px; */
   margin-bottom: 0%;
-  border: none;
   border-radius: 0%;
   /* font-family: 'ZCOOL XiaoWei', serif; */
   /* font-family: 'Play', sans-serif; */
@@ -27,12 +30,16 @@ a:focus {
   font-family: 'Work Sans', sans-serif;
   font-size: 14px;
   font-weight: bold;
-  text-align: center;
+  text-align: baseline;
+  border-bottom: 1px black solid;
+  /* position: fixed; */
   /* margin-top: 30px; */
 }
 
 .navbar-default {
   background-color: white;
+  /* position: fixed; */
+
 }
 
 .navbar-brand {
