--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -43,7 +43,7 @@
   font-size: 29px;
   background-color: #ffffffa6;
   margin-top: 30%;
-  margin-bottom: 35px;
+  /* margin-bottom: 35px; */
   padding: 20px;
   box-shadow: 0px 0px 10px -3px #000;
   font-family: 'ZCOOL XiaoWei', serif;
@@ -71,12 +71,9 @@
   background-position: left;
 }
 
-.second-section {
-  padding-bottom: 100px;
-  height: auto;
-}
-
 .points {
   font-size: 17px;
   color: black;
+  padding-left: 50px;
+  margin-bottom: 10px;
 }
