--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -17,10 +17,7 @@ a:focus {
 }
 
 .navbar {
-  position: fixed !important;
-  top: 0;
-  z-index: 1;
-  width: 82%;
+  position: relative;
   /* min-height: 100px; */
   margin-bottom: 0%;
   border-radius: 0%;
@@ -34,6 +31,15 @@ a:focus {
   border-bottom: 1px black solid;
   /* position: fixed; */
   /* margin-top: 30px; */
+}
+
+@media (min-width: 750px) {
+  .navbar {
+    position: fixed !important;
+    top: 0;
+    z-index: 1;
+    width: 82%;
+  }
 }
 
 .navbar-default {
