--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -77,3 +77,11 @@
   padding-left: 50px;
   margin-bottom: 10px;
 }
+
+.about-me {
+  font-size: 30px;
+  border-top: 1px solid black;
+  padding-top: 15px;
+  text-align: center;
+  margin-bottom: 0 !important;
+}
