--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -3,17 +3,18 @@
   background-attachment: fixed;
   background-size: cover;
   height: auto;
+  min-height: 80vh;
 }
 
 .top-review {
-  margin-top: 140px;
+  margin-top: 15%;
   font-family: 'ZCOOL XiaoWei', serif;
   color: black;
   text-align: left;
   background-color: #ffffffb2;
   padding: 1em;
   box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.384);
-  width: 700px;
+  /* width: 700px; */
 }
 
 .custom-info {
