--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -62,7 +62,7 @@
 .main-div-colon {
   /* padding-bottom: 100px; */
   height: auto;
-  /* min-height: 90vh; */
+  min-height: 90vh;
   margin-top: 70px;
 }
 
@@ -137,6 +137,7 @@
   color: black;
   font-size: 17px;
   font-weight: bold;
+  margin-bottom: 1rem;
 }
 
 .about-myth {
