--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -51,13 +51,7 @@
   font-size: 25px;
 }
 
-.main-div {
-  /* background-size: cover; */
-  padding-bottom: 100px;
-  height: auto;
-  min-height: 90vh;
-  margin-top: 50px;
-}
+
 
 .main-div-colon {
   /* padding-bottom: 100px; */
@@ -237,4 +231,13 @@
   border-top: 1px solid black;
   padding-top: 15px;
   text-align: center;
+}
+
+@media (max-width: 750px) {
+  .what-will-get {
+    font-size: 30px;
+    border-top: 1px solid black;
+    padding-top: 15px;
+    text-align: center;
+  }
 }
