--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -57,9 +57,25 @@ a:focus {
   padding: 0;
   font-size: 30px;
   color: black !important; */
-  font-size: 25px;
+  font-size: 25px !important;
   /* margin-top: 30px !important; */
 
+}
+
+@media (min-width: 750px) {
+  .navbar-brand {
+    /* position: absolute; */
+    /* width: 100%;
+    left: 0;
+    top: 15px;
+    text-align: center;
+    padding: 0;
+    font-size: 30px;
+    color: black !important; */
+    font-size: 15px !important;
+    /* margin-top: 30px !important; */
+
+  }
 }
 
 .navbar-right {
