--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,7 +1,99 @@
-.main-div-about {
+.div-about-lena-home {
   padding-bottom: 100px;
   height: auto;
   min-height: 90vh;
+  background-image: url('../images/about.jpg');
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-position: left;
+}
+
+@media (max-width: 750px) {
+  .div-about-lena-home {
+    padding-bottom: 10px;
+    height: auto;
+    min-height: 55vh;
+    background-image: url('../images/about.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+  }
+}
+
+.bio {
+  text-align: justify;
+  font-size: 20px;
+  background-color: #ffffffde;
+  margin-top: 20%;
+  margin-bottom: 10px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px -3px #000;
+  font-family: 'ZCOOL XiaoWei', serif;
+  color: black;
+  /* line-height: 20px; */
+}
+
+@media (max-width: 750px) {
+  .bio {
+    text-align: justify;
+    font-size: 14px;
+    background-color: #ffffffde;
+    margin-top: 0;
+    margin-bottom: 10px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px -3px #000;
+    font-family: 'ZCOOL XiaoWei', serif;
+    color: black;
+    /* line-height: 20px; */
+  }
+}
+
+.first-section-home {
+  padding-bottom: 100px;
+  height: auto;
+  min-height: 90vh;
+  margin-top: 50px;
+  background-image: url('../images/lena.jpg');
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-position: right;
+}
+
+@media (max-width: 750px) {
+  .first-section-home {
+    padding-bottom: 10px;
+    height: auto;
+    min-height: 55vh;
+    margin-top: 20px;
+    background-image: url('../images/lena.jpg');
+    background-repeat: no-repeat;
+    background-size: 105%;
+    background-position: center;
+  }
+}
+
+/* .pic-one {
+  background-image: url('../images/lena.jpg');
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-position: right;
+} */
+
+.what-will-get {
+  font-size: 30px;
+  border-top: 1px solid black;
+  padding-top: 15px;
+  text-align: center;
+}
+
+@media (max-width: 750px) {
+  .what-will-get {
+    font-size: 17px;
+    border-top: 1px solid black;
+    padding-top: 5px;
+    text-align: center;
+    font-weight: bold;
+  }
 }
 
 .main-info {
@@ -31,13 +123,6 @@
   color: white !important;
 }
 
-.pic-one {
-  background-image: url('../images/lena.jpg');
-  background-repeat: no-repeat;
-  background-size: 70%;
-  background-position: right;
-}
-
 .on-top {
   text-align: left;
   font-size: 30px;
@@ -51,25 +136,24 @@
   line-height: 20px;
 }
 
-.bio {
-  text-align: justify;
-  font-size: 20px;
-  background-color: #ffffffde;
-  margin-top: 20%;
-  margin-bottom: 10px;
-  padding: 20px;
-  box-shadow: 0px 0px 10px -3px #000;
-  font-family: 'ZCOOL XiaoWei', serif;
-  color: black;
-  /* line-height: 20px; */
+@media (max-width: 750px) {
+  .on-top {
+    text-align: left;
+    font-size: 16px;
+    background-color: #ffffffde;
+    margin-top: 0;
+    /* margin-bottom: 35px; */
+    padding: 20px;
+    box-shadow: 0px 0px 10px -3px #000;
+    font-family: 'Great Vibes', cursive;
+    color: black;
+    /* line-height: 10px; */
+  }
 }
 
-.pic-four {
-  background-image: url('../images/about.jpg');
-  background-repeat: no-repeat;
-  background-size: 70%;
-  background-position: left;
-}
+
+
+
 
 .points {
   font-size: 17px;
