--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -57,7 +57,7 @@ a:focus {
   padding: 0;
   font-size: 30px;
   color: black !important; */
-  font-size: 25px !important;
+  font-size: 1.25rem !important;
   /* margin-top: 30px !important; */
 
 }
@@ -72,7 +72,7 @@ a:focus {
     padding: 0;
     font-size: 30px;
     color: black !important; */
-    font-size: 15px !important;
+    font-size: 1rem !important;
     /* margin-top: 30px !important; */
 
   }
