--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -28,6 +28,7 @@
   margin-bottom: 10px;
   padding: 20px;
   box-shadow: 0px 0px 10px -3px #000;
+  /* font-family: 'Open Sans Condensed', sans-serif; */
   font-family: 'ZCOOL XiaoWei', serif;
   color: black;
   /* line-height: 20px; */
@@ -143,7 +144,7 @@
     background-color: #ffffffde;
     margin-top: 0;
     /* margin-bottom: 35px; */
-    padding: 20px;
+    padding: 0;
     box-shadow: 0px 0px 10px -3px #000;
     font-family: 'Great Vibes', cursive;
     color: black;
