--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -141,11 +141,11 @@
   .on-top {
     text-align: left;
     font-size: 20px;
-    background-color: #ffffffde;
+    background-color: white;
     margin-top: 0;
     /* margin-bottom: 35px; */
     padding: 0;
-    box-shadow: 0px 0px 10px -3px #000;
+    box-shadow: none;
     font-family: 'Great Vibes', cursive;
     color: black;
     /* line-height: 10px; */
