--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -26,6 +26,7 @@
   text-align: justify;
   color: #000;
   font-size: 15px;
+  margin-bottom: 20px;
 }
 
 .info-benefit {
@@ -56,8 +57,8 @@
 .main-div-colon {
   /* padding-bottom: 100px; */
   height: auto;
-  min-height: 90vh;
-  margin-top: 70px;
+  min-height: 80vh;
+  /* margin-top: 70px; */
 }
 
 .opacity-div {
@@ -119,8 +120,8 @@
 }
 
 .how-you-know {
-  margin-top: 70px;
-  margin-bottom: 30px;
+  margin-top: 80px;
+  /* margin-bottom: 30px; */
   text-align: center;
   color: black;
   font-size: 30px;
@@ -166,13 +167,22 @@
   text-align: left;
 }
 
-.recommendations {
+.in-the-words {
   padding-left: 20px;
   padding-right: 20px;
   color: black;
   font-size: 17px;
   /* font-weight: bold; */
   text-align: center;
+}
+
+.recommendations {
+  padding-left: 20px;
+  padding-right: 20px;
+  color: black;
+  font-size: 17px;
+  /* font-weight: bold; */
+  text-align: justify;
 }
 
 .about-colonic {
@@ -201,6 +211,7 @@
   font-size: 15px;
   font-weight: bold;
   text-align: justify;
+  line-height: 25px;
 }
 
 .benefits {
@@ -231,4 +242,8 @@
 
 .include {
   margin-right: 30px;
+}
+
+.what-is-colonic {
+  margin: 15px;
 }
