--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -56,21 +56,31 @@
 
 .main-div-colon {
   /* padding-bottom: 100px; */
-  height: auto;
+  /* height: auto; */
   min-height: 70vh;
+  margin: 10px;
   /* margin-top: 70px; */
 }
 
-@media (max-width: 750px) {
+@media (max-width: 700px) {
   .main-div-colon {
     /* padding-bottom: 100px; */
-    height: auto;
-    min-height: 40vh;
+    /* height: auto; */
+    min-height: 30vh;
     /* margin-top: 70px; */
   }
 }
 
-.opacity-div {
+@media (max-width:1370px) and (min-width:701px) {
+  .main-div-colon {
+    /* padding-bottom: 100px; */
+    /* height: auto; */
+    min-height: 30vh;
+    /* margin-top: 70px; */
+  }
+}
+
+​ .opacity-div {
   /* height: auto; */
   background-color: #ffffff60;
 }
@@ -122,7 +132,7 @@
   margin-top: 30px;
 }
 
-.how-you-know {
+.gravity-method-header {
   margin-top: 50px;
   /* margin-bottom: 30px; */
   text-align: center;
@@ -130,10 +140,28 @@
   font-size: 30px;
 }
 
-@media (max-width: 750px) {
-  .how-you-know {
+@media (max-width: 700px) {
+  .gravity-method-header {
     margin-top: 10px;
     margin-bottom: 5px;
+    text-align: center;
+    color: black;
+    font-size: 20px;
+  }
+}
+
+.how-you-know {
+  margin-top: 30px;
+  /* margin-bottom: 30px; */
+  text-align: center;
+  color: black;
+  font-size: 30px;
+}
+
+@media (max-width: 700px) {
+  .how-you-know {
+    margin-top: 10px;
+    /* margin-bottom: 5px; */
     text-align: center;
     color: black;
     font-size: 20px;
@@ -203,19 +231,20 @@
   text-align: left;
   min-height: 80vh;
   /* vertical-align: middle !important; */
-  padding: 10% 20px;
+  padding: 10px 20px 0px 20px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 800px) {
   .about-colonic {
     font-size: 13px;
     text-align: left;
     /* height: auto; */
     min-height: auto;
     /* vertical-align: middle !important; */
-    padding: 10px 10px;
+    padding: 2px 2px 2px 2px;
   }
 }
+
 
 .recommendations-b {
   padding-left: 20px;
@@ -284,9 +313,16 @@
   height: 70vh;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 700px) {
   .first-section-about {
     margin-top: 0;
-    height: 60vh;
+    min-height: auto;
+  }
+}
+
+@media (max-width:1370px) and (min-width:701px) {
+  .first-section-about {
+    margin-top: 100px;
+    height: 30vh;
   }
 }
