--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -5,7 +5,8 @@
   padding-bottom: 100px;
   height: auto;
   min-height: 90vh;
-  margin-top: 70px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .contact-info {
