--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,7 +8,7 @@
   background-position: left;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 770px) {
   .div-about-lena-home {
     padding-bottom: 10px;
     height: auto;
@@ -24,7 +24,7 @@
   text-align: justify;
   font-size: 20px;
   background-color: #ffffffde;
-  margin-top: 20%;
+  margin-top: 200px;
   margin-bottom: 10px;
   padding: 20px;
   box-shadow: 0px 0px 10px -3px #000;
@@ -34,7 +34,7 @@
   /* line-height: 20px; */
 }
 
-@media (max-width: 750px) {
+@media (max-width: 770px) {
   .bio {
     text-align: justify;
     font-size: 14px;
@@ -50,17 +50,17 @@
 }
 
 .first-section-home {
-  padding-bottom: 100px;
+  padding-bottom: 20px;
   height: auto;
-  min-height: 90vh;
-  margin-top: 50px;
+  min-height: 80vh;
+  margin-top: 20px;
   background-image: url('../images/lena.jpg');
   background-repeat: no-repeat;
   background-size: 70%;
   background-position: right;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 770px) {
   .first-section-home {
     padding-bottom: 10px;
     height: auto;
@@ -87,7 +87,7 @@
   text-align: center;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 770px) {
   .what-will-get {
     font-size: 17px;
     border-top: 1px solid black;
@@ -128,7 +128,7 @@
   text-align: left;
   font-size: 30px;
   background-color: #ffffffde;
-  margin-top: 30%;
+  margin-top: 200px;
   /* margin-bottom: 35px; */
   padding: 20px;
   box-shadow: 0px 0px 10px -3px #000;
@@ -137,7 +137,7 @@
   line-height: 20px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 770px) {
   .on-top {
     text-align: left;
     font-size: 20px;
@@ -176,4 +176,8 @@
   border-top: 1px solid black;
   padding-top: 15px;
   text-align: center;
+}
+
+.second-section {
+  margin-top: 20px;
 }
