--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -19,8 +19,8 @@ a:focus {
 .navbar {
   position: relative;
   /* min-height: 100px; */
-  margin-bottom: 0%;
-  border-radius: 0%;
+  margin-bottom: 0;
+  border-radius: 0;
   /* font-family: 'ZCOOL XiaoWei', serif; */
   /* font-family: 'Play', sans-serif; */
   /* font-family: 'Staatliches'; */
@@ -33,14 +33,14 @@ a:focus {
   /* margin-top: 30px; */
 }
 
-@media (min-width: 750px) {
+/* @media (min-width: 750px) {
   .navbar {
     position: fixed !important;
     top: 0;
     z-index: 1;
-    width: 82%;
+    margin-left: auto !important;
   }
-}
+} */
 
 .navbar-default {
   background-color: white;
