--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,26 +1,39 @@
 .contacts-main {
-  background-image: url('../images/flower.jpeg');
-  background-attachment: fixed;
-  background-size: cover;
-  padding-bottom: 100px;
+  /* background-image: url('../images/papaya.jpeg'); */
+  /* background-attachment: fixed; */
+  /* background-size: cover; */
   height: auto;
-  min-height: 90vh;
+  min-height: 80vh;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.contact-header {
+  text-align: left;
+  color: black;
+  font-size: 30px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .contact-info {
   font-family: 'ZCOOL XiaoWei', serif;
   color: black;
   text-align: left;
-  line-height: 40px;
+  line-height: 25px;
   font-size: 20px;
-  background-color: rgba(255, 255, 255, 0.904);
-  padding: 1em;
-  margin-top: 100px;
-  margin-left: 30px;
+  /* background-color: rgba(255, 255, 255, 0.904); */
+  margin-bottom: 40px;
+
+  /* padding: 1em; */
+  /* margin-top: 100px; */
+  /* margin-left: 30px; */
   /* border-radius: 1em; */
-  box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.384);
+  /* box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.384); */
+}
+
+.work-hours {
+  margin-left: 28px;
 }
 
 .map-icon {
@@ -29,9 +42,11 @@
 }
 
 .my-maps {
-  margin-right: 30px;
-  margin-top: 100px;
-  padding-bottom: 60px;
+  height: 400px;
+  /* margin: 20px; */
+  margin-right: 20px;
+  /* margin-top: 100px; */
+  /* padding-bottom: 60px; */
 }
 
 .marker-name {
@@ -48,4 +63,11 @@
 
 .link-to-direction {
   text-decoration: underline;
+}
+
+.contact-picture {
+  background-image: url('../images/scrub.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100%;
 }
