--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -20,7 +20,7 @@
   font-family: 'ZCOOL XiaoWei', serif;
   color: black;
   text-align: left;
-  line-height: 25px;
+  line-height: 25px !important;
   font-size: 20px;
   /* background-color: rgba(255, 255, 255, 0.904); */
   margin-bottom: 40px;
