--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -68,7 +68,7 @@
     margin-top: 20px;
     background-image: url('../images/lena.jpg');
     background-repeat: no-repeat;
-    background-size: 105%;
+    background-size: 90%;
     background-position: center;
   }
 }
@@ -134,7 +134,7 @@
   box-shadow: 0px 0px 10px -3px #000;
   font-family: 'Great Vibes', cursive;
   color: black;
-  line-height: 20px;
+  /* line-height: 20px; */
 }
 
 @media (max-width: 770px) {
@@ -143,12 +143,12 @@
     font-size: 20px;
     background-color: white;
     margin-top: 0;
+    margin-bottom: 15px;
     /* margin-bottom: 35px; */
     padding: 0;
     box-shadow: none;
     font-family: 'Great Vibes', cursive;
     color: black;
-    /* line-height: 10px; */
   }
 }
 
