--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,22 +1,41 @@
 .div-about-lena-home {
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
   height: auto;
   min-height: 90vh;
-  background-image: url('../images/about.jpg');
+  background-image: url('../images/lenabio.jpeg');
   background-repeat: no-repeat;
   background-size: 70%;
+  /* width: 60% !important; */
   background-position: left;
+
 }
 
 @media (max-width: 770px) {
   .div-about-lena-home {
-    padding-bottom: 10px;
+    padding-bottom: 10;
     height: auto;
-    min-height: 55vh;
-    background-image: url('../images/about.jpg');
+    min-height: 0;
+    background-image: none;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 0;
     background-position: center;
+  }
+}
+
+.div-about-lena-two {
+  display: none;
+  padding-bottom: 10px;
+  height: auto;
+  min-height: 55vh;
+  background-image: url('../images/lenabio.jpeg');
+  background-repeat: no-repeat;
+  background-size: 90%;
+  background-position: center;
+}
+
+@media (max-width: 770px) {
+  .div-about-lena-two {
+    display: block;
   }
 }
 
@@ -24,9 +43,9 @@
   text-align: justify;
   font-size: 20px;
   background-color: #ffffffde;
-  margin-top: 200px;
+  margin-top: 180px;
   margin-bottom: 10px;
-  padding: 20px;
+  padding: 20px 20px 5px 20px;
   box-shadow: 0px 0px 10px -3px #000;
   /* font-family: 'Open Sans Condensed', sans-serif; */
   font-family: 'ZCOOL XiaoWei', serif;
@@ -41,7 +60,7 @@
     background-color: #ffffffde;
     margin-top: 0;
     margin-bottom: 10px;
-    padding: 20px;
+    padding: 10px 10px 5px 10px;
     box-shadow: 0px 0px 10px -3px #000;
     font-family: 'ZCOOL XiaoWei', serif;
     color: black;
