--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -18,7 +18,7 @@ a:focus {
 
 .navbar {
   position: relative;
-  margin-left: auto !important;
+  /* margin-left: auto !important; */
   margin-bottom: 0;
   border-radius: 0;
   /* font-family: 'ZCOOL XiaoWei', serif; */
@@ -31,6 +31,10 @@ a:focus {
   border-bottom: 1px black solid;
   /* position: fixed; */
   /* margin-top: 30px; */
+}
+
+.navbar-links {
+  margin-left: auto !important;
 }
 
 /* @media (min-width: 750px) {
