--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -5,7 +5,7 @@
   right: 0;
   width: 100%;
   height: 150px;
-  line-height: 50px;
+  /* line-height: 50px; */
   background-color: white;
   font-family: 'ZCOOL XiaoWei', serif;
   font-size: 17px;
@@ -79,4 +79,8 @@ a {
 
 .let-connect {
   margin: 0 !important;
+}
+
+.work-hours-footer {
+  margin-left: 25px;
 }
