--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -9,14 +9,15 @@
 // Optional
 @import "node_modules/bootstrap/scss/reboot";
 @import "node_modules/bootstrap/scss/type";
-// @import "node_modules/bootstrap/scss/images";
+@import "node_modules/bootstrap/scss/_print";
 @import "node_modules/bootstrap/scss/code";
 @import "node_modules/bootstrap/scss/_grid";
 @import "node_modules/bootstrap/scss/_navbar";
-// @import "node_modules/bootstrap/scss/_print";
+// @import "node_modules/bootstrap/scss/_nav";
 @import "node_modules/bootstrap/scss/_buttons";
 // @import "node_modules/bootstrap/scss/_button-group";
 // @import "node_modules/bootstrap/scss/_dropdown";
-// @import "node_modules/bootstrap/scss/_input-group";
-// @import "node_modules/bootstrap/scss/_badge";
+// @import "node_modules/bootstrap/scss/_screen-reader";
+// @import "node_modules/bootstrap/scss/_pagination";
+@import "node_modules/bootstrap/scss/_carousel";
 @import "node_modules/bootstrap/scss/_transitions";
