--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -20,16 +20,18 @@
   font-family: 'ZCOOL XiaoWei', serif;
   color: black;
   text-align: left;
-  line-height: 25px !important;
   font-size: 20px;
   /* background-color: rgba(255, 255, 255, 0.904); */
-  margin-bottom: 40px;
 
   /* padding: 1em; */
   /* margin-top: 100px; */
   /* margin-left: 30px; */
   /* border-radius: 1em; */
   /* box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.384); */
+}
+
+.contact-content {
+  margin-top: 20px;
 }
 
 .work-hours {
@@ -74,6 +76,7 @@
 
 .div-book-apt {
   margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .book-apt {
