--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,322 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Coiny');
 
-.about-info {
-  text-align: center;
-  font-size: 20px;
-  background-color: #ffffffa6;
-  margin-top: 140px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 30px;
-  border-radius: 1em;
-  box-shadow: 0px 0px 10px -3px #000;
-  color: black;
-  padding: 30px;
-  line-height: 30px;
-}
-
-.about-colon {
-  padding-top: 10px;
-  text-align: center;
-  font-size: 30px;
-  color: #000;
-}
-
-.info-about-colon {
-  text-align: justify;
-  color: #000;
-  font-size: 15px;
-  margin-bottom: 10px;
-}
-
-.info-benefit {
-  padding: 5px;
-  text-align: justify;
-  color: #000;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.info-about-colon-dos {
-  padding: 5px;
-  text-align: justify;
-  color: #000;
-  font-size: 15px;
-  font-weight: bold;
-}
-
-.info-dos {
-  padding: 10px 70px 10px 70px;
-  text-align: left;
-  color: #000;
-  font-size: 25px;
-}
-
-.main-div-colon-ananas {
-  /* padding-bottom: 100px; */
-  /* height: auto; */
-  height: auto;
-  /* margin: 10px; */
-  /* margin-top: 70px; */
-}
-
-
-.main-div-colon {
-  /* padding-bottom: 100px; */
-  /* height: auto; */
-  min-height: 70vh;
-  margin: 10px;
-  /* margin-top: 70px; */
-}
-
-@media (max-width: 700px) {
-  .main-div-colon {
-    /* padding-bottom: 100px; */
-    /* height: auto; */
-    min-height: 30vh;
-    /* margin-top: 70px; */
-  }
-}
-
-/* @media (max-width:1370px) and (min-width:701px) {
-  .main-div-colon {
-    padding-bottom: 100px;
-    height: auto;
-    min-height: 30vh;
-    margin-top: 70px;
-  }
-} */
-
-​ .opacity-div {
-  /* height: auto; */
-  background-color: #ffffff60;
-}
-
-.app-btn {
-  color: black;
-  background-color: transparent;
-  font-size: 25px;
-  height: 50px;
-  width: 240px;
-  border: 2px solid black;
-}
-
-.app-btn:active {
-  color: rgba(0, 0, 0, 0.712);
-  background-color: blue !important;
-}
-
-.app-btn:hover {
-  color: rgba(0, 0, 0, 0.712);
-  background-color: lightblue !important;
-}
-
-.mk-app-btn {
-  text-align: center;
-  margin: 30px;
-  padding: 20px;
-}
-
-.picture-about {
-  background-image: url('../images/ananas.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 70vh;
-}
-
-@media (max-width: 760px) {
-  .picture-about {
-    background-image: url('../images/ananas.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 30vh;
-  }
-}
-
-.picture-include {
-  background-image: url('../images/include.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* transform: scaleX(-1); */
-  /* transform: rotate(180deg); */
-}
-
-.image-about-about {
-  height: auto;
-  /* background-image: url('../images/oneside.jpeg'); */
-  /* background-size: cover; */
-  /* background-attachment: fixed; */
-  margin-top: 30px;
-}
-
-.gravity-method-header {
-  /* margin-top: 50px; */
-  /* margin-bottom: 30px; */
-  text-align: center;
-  color: black;
-  font-size: 30px;
-}
-
-@media (max-width: 700px) {
-  .gravity-method-header {
-    margin-top: 10px;
-    margin-bottom: 5px;
-    text-align: center;
-    color: black;
-    font-size: 20px;
-  }
-}
-
-.how-you-know {
-  margin-top: 30px;
-  /* margin-bottom: 30px; */
-  text-align: center;
-  color: black;
-  font-size: 30px;
-}
-
-@media (max-width: 700px) {
-  .how-you-know {
-    margin-top: 10px;
-    /* margin-bottom: 5px; */
-    text-align: center;
-    color: black;
-    font-size: 20px;
-  }
-}
-
-.myth {
-  text-align: center;
-  color: black;
-  font-size: 17px;
-  font-weight: bold;
-  margin-bottom: 1rem;
-}
-
-
-
-.about-myth {
-  text-align: justify;
-  font-size: 17px;
-  padding: 15px;
-}
-
-.poop-icon {
-  text-align: center;
-  font-size: 50px;
-  color: #2f6295;
-  margin-bottom: 15px;
-}
-
-
-
-.pic-three {
-  background-attachment: fixed;
-}
-
-.picture-four {
-  background-image: url('../images/water.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.list-group-item {
-  position: relative;
-  display: block;
-  padding: 10px 95px;
-  background-color: rgba(255, 255, 255, 0);
-  border: none;
-  text-align: left;
-}
-
-
-
-.recommendations {
-  padding-left: 20px;
-  padding-right: 20px;
-  color: black;
-  font-size: 17px;
-  /* font-weight: bold; */
-  text-align: justify;
-}
-
-.about-colonic {
-  font-size: 17px;
-  text-align: justify;
-  text-indent: 35px;
-  /* min-height: 80vh; */
-  /* vertical-align: middle !important; */
-  padding: 10px 15px 0px 15px;
-}
-
-@media (max-width: 800px) {
-  .about-colonic {
-    font-size: 13px;
-    text-align: left;
-    /* height: auto; */
-    min-height: auto;
-    /* vertical-align: middle !important; */
-    padding: 2px 2px 2px 2px;
-  }
-}
-
-
-
-
-.recommendations-bottom {
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-  color: black;
-  font-size: 15px;
-  font-weight: bold;
-  text-align: justify;
-  line-height: 25px;
-}
-
-.benefits {
-  color: black;
-  font-size: 15px;
-  text-align: justify;
-}
-
-.icon {
-  font-size: 6px;
-  vertical-align: middle;
-}
-
-.icon-do {
-  font-size: 26px;
-  color: #45c445;
-}
-
-.icon-dont {
-  font-size: 26px;
-  color: red;
-  /* vertical-align: middle; */
-}
-
-.avoid {
-  margin-left: 30px;
-}
-
-.include {
-  margin-left: 30px;
-}
-
-.what-is-colonic {
-  margin: 15px;
-}
-
-.prepare-div {
-  /* border: 1px solid black; */
-  margin-bottom: 20px;
-
-}
-
 .first-section-about {
   margin-top: 20px;
-  /* height: 70vh; */
 }
 
 @media (max-width: 700px) {
@@ -326,14 +11,109 @@
   }
 }
 
-/* @media (max-width:1370px) and (min-width:701px) {
-  .first-section-about {
-    margin-top: 100px;
-    height: 30vh;
-  }
-} */
+.first-section-about-header {
+  text-align: center;
+  color: black;
+  font-size: 30px;
+}
 
-.ready-div {
+@media (max-width: 700px) {
+  .first-section-about-header {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    text-align: center;
+    color: black;
+    font-size: 20px;
+  }
+}
+
+.first-section-about-colonic {
+  font-size: 17px;
+  text-align: justify;
+  text-indent: 35px;
+  padding: 10px 15px 0px 15px;
+}
+
+@media (max-width: 800px) {
+  .first-section-about-colonic {
+    font-size: 13px;
+    text-align: left;
+    min-height: auto;
+    padding: 2px 2px 2px 2px;
+  }
+}
+
+.first-section-about-book-apt {
+  text-align: center;
+  margin-top: 80px;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 700px) {
+  .first-section-about-book-apt {
+    text-align: center;
+    margin-top: 10px;
+  }
+}
+
+.first-section-about-picture {
+  background-image: url('../images/ananas.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 70vh;
+}
+
+@media (max-width: 760px) {
+  .first-section-about-picture {
+    background-image: url('../images/ananas.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 30vh;
+  }
+}
+
+.second-section-about {
+  margin-top: 30px;
+  text-align: center;
+  color: black;
+  font-size: 30px;
+}
+
+@media (max-width: 700px) {
+  .second-section-about {
+    margin-top: 10px;
+    text-align: center;
+    color: black;
+    font-size: 20px;
+  }
+}
+
+.second-section-about-icon {
+  text-align: center;
+  font-size: 50px;
+  color: #2f6295;
+  margin-bottom: 15px;
+}
+
+.second-section-about-icon-header {
+  text-align: center;
+  color: black;
+  font-size: 17px;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.second-section-about-icon-content {
+  text-align: justify;
+  font-size: 17px;
+  padding: 15px;
+}
+
+.third-section-about {
+  margin-bottom: 20px;
+}
+
+.third-section-about-picture {
   background-image: url('../images/lenacube.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -342,7 +122,7 @@
 }
 
 @media (max-width: 700px) {
-  .ready-div {
+  .third-section-about-picture {
     background-image: url('../images/lenacube.jpeg');
     background-repeat: no-repeat;
     background-size: 100%;
@@ -350,14 +130,62 @@
   }
 }
 
-.div-book-apt-benefit {
+.third-section-about-header {
+  padding-top: 10px;
   text-align: center;
-  margin-top: 80px;
+  font-size: 30px;
+  color: #000;
 }
 
-@media (max-width: 700px) {
-  .div-book-apt-benefit {
-    text-align: center;
-    margin-top: 10px;
-  }
+.third-section-about-recommendations {
+  padding-left: 20px;
+  padding-right: 20px;
+  color: black;
+  font-size: 17px;
+  text-align: justify;
+}
+
+.third-section-about-avoid-include {
+  margin-left: 30px;
+}
+
+.third-section-about-colon-dos {
+  padding: 5px;
+  text-align: justify;
+  color: #000;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.icon-dont {
+  font-size: 26px;
+  color: red;
+}
+
+.icon-do {
+  font-size: 26px;
+  color: #45c445;
+}
+
+.third-section-about-points {
+  text-align: justify;
+  color: #000;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+.third-section-about-icon {
+  font-size: 6px;
+  vertical-align: middle;
+}
+
+.third-section-about-recommendations-bottom {
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: black;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: justify;
+  line-height: 25px;
 }
