--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,71 +1,39 @@
 .footer {
-  /* position: absolute; */
   bottom: 0;
   left: 0;
   right: 0;
   width: 100%;
   height: 150px;
-  /* line-height: 50px; */
   background-color: white;
   font-family: 'ZCOOL XiaoWei', serif;
   font-size: 17px;
-}
-
-.footer-list {
-  float: right;
-  margin: 0 30px 0 0;
-}
-
-li {
-  position: relative;
-  display: inline-block;
-}
-
-a {
-  color: #ccccdb;
-  text-decoration: none;
-  margin: 10px;
 }
 
 .box-footer {
   border-top: 1px solid rgba(0, 0, 0, 0.342);
 }
 
-.input-t {
-  border-bottom: 1px black solid;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  height: 28px;
-  margin-left: 27px;
+.footer-contact {
+  margin-bottom: 10px;
 }
 
-.input-t-2 {
+.footer-input-text {
   border: 1px black solid;
-  /* color: beige; */
   box-shadow: 1px 1px 1px 0px #3871d38f;
   border-bottom: 1px black solid;
   border-top: none;
   border-left: none;
-  /* border-right: none; */
   height: 28px;
   width: 200px;
-  /* margin-left: 27px; */
 }
 
 .input-message {
   border: 1px black solid;
-  /* color: beige; */
+  width: 200px;
   box-shadow: 1px 1px 1px 0px #3871d38f;
   border-bottom: 1px black solid;
   border-top: none;
   border-left: none;
-  /* border-right: none; */
-}
-
-.message-me {
-  margin-bottom: 0;
-  line-height: 1.7 !important;
 }
 
 .btn-form {
@@ -79,8 +47,4 @@ a {
 
 .let-connect {
   margin: 0 !important;
-}
-
-.work-hours-footer {
-  margin-left: 25px;
 }
