--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -125,7 +125,7 @@
 .third-section-home-bio {
   height: auto;
   min-height: 90vh;
-  background-image: url('../images/lenabio.jpeg');
+  background-image: url('../images/lena-laptop.jpg');
   background-repeat: no-repeat;
   background-size: 70%;
   background-position: left;
