--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -174,7 +174,7 @@
   padding-bottom: 10px;
   height: auto;
   min-height: 55vh;
-  background-image: url('../images/lenabio.jpeg');
+  background-image: url('../images/lena-laptop.jpg');
   background-repeat: no-repeat;
   background-size: 90%;
   background-position: center;
