--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -114,7 +114,7 @@
 }
 
 .third-section-about-picture {
-  background-image: url('../images/lenacube.jpeg');
+  background-image: url('../images/lena-broccoli.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   min-width: 100%;
@@ -123,7 +123,7 @@
 
 @media (max-width: 700px) {
   .third-section-about-picture {
-    background-image: url('../images/lenacube.jpeg');
+    background-image: url('../images/lena-broccoli.jpg');
     background-repeat: no-repeat;
     background-size: 100%;
     min-height: 40vh;
