--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -48,3 +48,10 @@
 .let-connect {
   margin: 0 !important;
 }
+
+.instagram-icon-footer {
+  color: white;
+  font-size: 22px;
+  border-radius: 8px;
+  background-image: linear-gradient(-35deg, red, blue);
+}
