--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -90,3 +90,10 @@
   background-color: #7abc52;
   color: white !important;
 }
+
+.instagram-icon {
+  color: white;
+  font-size: 26px;
+  border-radius: 8px;
+  background-image: linear-gradient(-35deg, red, blue);
+}
