--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -5,15 +5,22 @@
   width: 100%;
   height: 150px;
   background-color: white;
-  font-family: 'ZCOOL XiaoWei', serif;
   font-size: 17px;
+  font-weight: 300;
+  color: black;
 }
 
 .box-footer {
   border-top: 1px solid rgba(0, 0, 0, 0.342);
 }
 
+.footer-contact-header {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
 .footer-contact {
+  margin-top: 9px;
   margin-bottom: 10px;
 }
 
@@ -24,13 +31,15 @@
   border-top: none;
   border-left: none;
   height: 28px;
-  width: 200px;
+  width: 224px;
 }
 
 .input-message {
   border: 1px black solid;
-  width: 200px;
+  width: 86%;
+  height: 110px;
   box-shadow: 1px 1px 1px 0px #3871d38f;
+  margin-top: 7px;
   border-bottom: 1px black solid;
   border-top: none;
   border-left: none;
@@ -46,7 +55,8 @@
 }
 
 .let-connect {
-  margin: 0 !important;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .instagram-icon-footer {
