--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,5 +1,5 @@
 /* @import url('https://fonts.googleapis.com/css?family=Coiny'); */
-@import url('https://fonts.googleapis.com/css?family=Arimo');
+/* @import url('https://fonts.googleapis.com/css?family=Arimo'); */
 
 .first-section-about {
   margin-top: 20px;
