--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -60,7 +60,7 @@
   border-top: 1px solid black;
   padding-top: 15px;
   text-align: center;
-  font-weight: 300;
+  font-weight: 300 !important;
   color: black;
 }
 
