--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -36,7 +36,7 @@
 
 .input-message {
   border: 1px black solid;
-  width: 86%;
+  width: 462px;
   height: 110px;
   box-shadow: 1px 1px 1px 0px #3871d38f;
   margin-top: 7px;
