--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -56,11 +56,11 @@
 }
 
 .second-section-home-header {
-  font-size: 30px;
+  font-size: 26px;
   border-top: 1px solid black;
   padding-top: 15px;
   text-align: center;
-  font-weight: 300 !important;
+  font-weight: 300;
   color: black;
 }
 
@@ -122,7 +122,7 @@
 }
 
 .third-section-home-header {
-  font-size: 30px;
+  font-size: 26px;
   border-top: 1px solid black;
   padding-top: 15px;
   text-align: center;
@@ -195,7 +195,7 @@
 }
 
 .fourth-section-home-header {
-  font-size: 30px;
+  font-size: 26px;
   border-top: 1px solid black;
   padding-top: 15px;
   text-align: center;
