--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -44,12 +44,14 @@
 .question {
   font-weight: 500;
   font-size: 17px;
+  margin-bottom: 10px;
 }
 
 .answer {
   font-weight: 200;
   text-align: justify;
   font-size: 17px;
+  margin-bottom: 10px;
 }
 
 .answer-points {
