--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -59,7 +59,7 @@
 
 @media (max-width: 770px) {
   .input-message {
-    width: 380px;
+    width: 370px;
   }
 }
 
@@ -82,4 +82,21 @@
   font-size: 22px;
   border-radius: 8px;
   background-image: linear-gradient(-35deg, red, blue);
+}
+
+.div-book-apt {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.book-apt {
+  border: 1px black solid;
+  padding: 10px;
+  background-color: white;
+}
+
+.book-apt:hover {
+  text-decoration: none;
+  background-color: #7abc52;
+  color: white !important;
 }
