--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -39,6 +39,13 @@
   font-size: 26px;
   font-weight: 300;
   color: black;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 770px) {
+  .prices {
+    font-size: 17px;
+  }
 }
 
 .second-section-faq-header {
