--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -133,3 +133,9 @@
   background-color: #7abc52;
   color: white !important;
 }
+
+.spring-deal {
+  background-color: lightskyblue;
+  color: white;
+  text-align: center;
+}
