--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -166,6 +166,12 @@
   font-weight: 300;
 }
 
+@media (max-width: 700px) {
+  .third-section-about-header {
+    font-size: 20px;
+  }
+}
+
 .third-section-about-recommendations {
   padding-left: 20px;
   padding-right: 20px;
