--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -258,8 +258,8 @@
 
 @media (max-width: 770px) {
   .check-deal {
-    margin-top: 230px;
-    margin-right: 20px;
+    margin-top: 250px;
+    margin-left: 30px;
     font-size: 20px;
   }
 }
