--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -11,7 +11,7 @@
 .contact-header {
   text-align: center;
   color: black;
-  font-size: 26px;
+  font-size: 23px;
   margin-bottom: 20px;
   font-weight: 300;
 }
@@ -74,14 +74,16 @@
 }
 
 .book-apt {
-  border: 1px black solid;
+  border-radius: 5px;
+  border: 1px #2996cc solid;
   padding: 10px;
-  background-color: white;
+  background-color: #2996cc;
+  color: white !important;
 }
 
 .book-apt:hover {
   text-decoration: none;
-  background-color: #7abc52;
+  background-color: #4ba6d4;
   color: white !important;
 }
 
