--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -54,7 +54,7 @@
 
 .prices {
   text-align: center;
-  font-size: 26px;
+  font-size: 23px;
   font-weight: 300;
   color: black;
   margin-bottom: 20px;
@@ -68,7 +68,7 @@
 }
 
 .second-section-faq-header {
-  font-size: 26px;
+  font-size: 23px;
   border-top: 1px solid black;
   padding-top: 15px;
   text-align: center;
@@ -154,14 +154,16 @@
 }
 
 .book-apt {
-  border: 1px black solid;
+  border-radius: 5px;
+  border: 1px #2996cc solid;
   padding: 10px;
-  background-color: white;
+  background-color: #2996cc;
+  color: white !important;
 }
 
 .book-apt:hover {
   text-decoration: none;
-  background-color: #7abc52;
+  background-color: #4ba6d4;
   color: white !important;
 }
 
