--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -90,14 +90,16 @@
 }
 
 .book-apt {
-  border: 1px black solid;
+  border-radius: 5px;
+  border: 1px #2996cc solid;
   padding: 10px;
-  background-color: white;
+  background-color: #2996cc;
+  color: white !important;
 }
 
 .book-apt:hover {
   text-decoration: none;
-  background-color: #7abc52;
+  background-color: #4ba6d4;
   color: white !important;
 }
 
