--- a/src/styles/blogcard.css
+++ b/src/styles/blogcard.css
@@ -35,6 +35,8 @@
   font-weight: 600;
   text-align: justify;
   line-height: 21px;
+  font-size: 17px;
+  font-weight: 500;
 }
 
 .blogcardtext {
@@ -42,6 +44,7 @@
   text-align: justify;
   font-size: 15px;
   line-height: 21px;
+  font-weight: 200;
 }
 
 .blogcardcardlink:hover {
